[package]
name = "mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bitnet_rs = { path = "../.." }
candle-core = "0.4.1"
candle-datasets = "0.4.1"
candle-nn = "0.4.1"
clap = { version = "4.5.3", features = ["derive"] }
rand = "0.8.5"
